add: ai function

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" href="/favicon.ico" />
     <link rel="stylesheet" href="/browser_upgrade/index.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, viewport-fit=cover"/>
+    <meta name="keywords" content="数游科技,数游AI,AI工具,AI对话,AI绘画,AI视频">
+    <meta name="description" content="数游AI平台为您聚合了包括OpenAI、Google、Anthropic、Grok、DeepSeek、通义千问在内的众多前沿大模型。无论您面临智能对话、AI绘画还是视频生成的复杂需求，我们都能为您提供全方位、持续进化的智能创作服务。">
     <meta http-equiv="Expires" content="0">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Cache-control" content="no-cache">
